--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <a href="https://aavechain.github.io/resume/Avi_upd_resume.pdf"> Avneesh_Resume </a>
+    <a href="https://github.com/AaveChain/resume/blob/main/Avi_upd_resume.pdf"> Avneesh_Resume </a>
 </body>
 </html>
